# 3-Python-AI-Projects-for-Beginners---Full-Tutorial

./: .gitignore  README.md  instructions.md
project_1/: main.py  pyproject.toml
